--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -15,3 +15,4 @@ analyzer:
     avoid_catches_without_on_clauses: ignore
     one_member_abstracts: ignore
     flutter_style_todos: ignore
+    unnecessary_library_name: ignore
